Use .toList(), instead of .collect(Collectors.toList()) in getCompanyPositions method (recommended by SonarCloud).